Update RangeAssignor.java